--- a/Gatito-web/src/app/game/game.component.html
+++ b/Gatito-web/src/app/game/game.component.html
@@ -21,11 +21,11 @@
         </div>
         
         <table>
-            @for (x of lobby?.tablero1; track x; let index = $index) {
+            @for (x of gato?.tablero1; track x; let index = $index) {
                 <tr>
                     @for (y of x; track y; let indey = $index) {
                         <td>
-                            @if (idUser == (lobby?.jugador1 ?? 0).toString()) {
+                            @if (idUser == (gato?.jugadorO ?? 0).toString()) {
                                 <img [src]="waterTiles[y]" >
                             } @else {
                                 <img (click)="disparar(index, indey)" style="cursor: pointer;" [src]="y == 2 ? waterTiles[y] : waterTiles[0] " >
